stop subnav items from wrapping and reduce size on small screens (#1777)

--- a/_components/RefHeader.css
+++ b/_components/RefHeader.css
@@ -10,6 +10,11 @@
   height: 3rem;
 }
 
+.refheader-link {
+  white-space: nowrap;
+  font-size: clamp(0.875rem, 1vw + 0.5rem, 1rem);
+}
+
 .refheader-link[data-active="true"] {
   color: hsl(var(--primary));
 }
